Updated Contact page

--- a/contacts.html
+++ b/contacts.html
@@ -119,42 +119,50 @@
     <section class="contact-form">
     	<div class="cj-container">
     		<h2 class="section-header" data-css-animate="trigger">Сontact Us Now</h2>
-           <div class="contact-form-wrapper">
-            <form action="POST">
-                <div class="row no-gutters">
-                    <div class="col-md-6">
-                        <div class="cj-form-group contact-form-inputs">
-                            <label class="cj-form-label" for="name">Your Name</label>
-                        <input class="contact-form-input" type="text" name="name" id="name" placeholder="Enter your name">
-                        <span class="focus-input"></span>
-                        </div>
-                    </div>
-                    <div class="col-md-6 contact-form-inputs">
-                        <div class="cj-form-group">
-                             <label class="cj-form-label" for="name">Email</label>
-                        <input class="contact-form-input" type="text" name="email" id="email" placeholder="Enter your email address">
-                        <span class="focus-input"></span>
-                        </div>
+            <div class="row no-gutters contact-form-padding">
+                <div class="col-md-6">
+                    <div class="contact-form-wrapper">
+                        <form action="POST">
+                            <div class="row no-gutters">
+                                <div class="col-md-6">
+                                    <div class="cj-form-group contact-form-inputs">
+                                        <label class="cj-form-label" for="name">Your Name</label>
+                                    <input class="contact-form-input" type="text" name="name" id="name" placeholder="Enter your name">
+                                    <span class="focus-input"></span>
+                                    </div>
+                                </div>
+                                <div class="col-md-6 contact-form-inputs">
+                                    <div class="cj-form-group">
+                                         <label class="cj-form-label" for="name">Email</label>
+                                    <input class="contact-form-input" type="text" name="email" id="email" placeholder="Enter your email address">
+                                    <span class="focus-input"></span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row no-gutters">
+                                <div class="col-md-12">
+                                    <div class="cj-form-group">
+                                           <label class="cj-form-label" for="name">Email</label>
+                                    <textarea class="contact-form-textarea" name="message" id="message" placeholder="Your message here"></textarea>
+                                    <span class="focus-input"></span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class=" row no-gutters">
+                                <div class="col-sm-12 col-md-12">
+                                    <div class="cj-btn-container">
+                                        <button type="submit" class="cj-btn" data-css-animate="trigger"><span>Send</span></button>
+                                    </div>
+                                </div>
+                            </div>
+                        </form>
                     </div>
                 </div>
-                <div class="row no-gutters">
-                    <div class="col-md-12">
-                        <div class="cj-form-group">
-                               <label class="cj-form-label" for="name">Email</label>
-                        <textarea class="contact-form-textarea" name="message" id="message" placeholder="Your message here"></textarea>
-                        <span class="focus-input"></span>
-                        </div>
-                    </div>
+                <div class="col-md-6 contact-form-side-img-wrapper">
+                    <img src="img/pages/DSC_3165.jpg" alt="">
                 </div>
-                <div class=" row no-gutters">
-                    <div class="col-sm-12 col-md-12">
-                        <div class="cj-btn-container">
-                            <button type="submit" class="cj-btn" data-css-animate="trigger"><span>Send</span></button>
-                        </div>
-                    </div>
-                </div>
-            </form>
-        </div>
+            </div>
+           
     </div>
 </section><!-- CONTACT-FORM -->
 
