add product page

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
                     <li><a class="active-nav-item" href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="services.html">Services</a></li>
+                    <li><a href="projects.html">Projects</a></li>
                     <li><a href="#">Partners</a></li>
                     <li><a href="#">Carriers</a></li>
                     <li><a href="contacts.html">Contacts</a></li>
@@ -257,12 +258,13 @@
     <div class="cj-container">
         <h2 class="section-header" data-css-animate="trigger">Partners</h2>
 
-        <div class="partners-carousel-container" data-css-animate="trigger">
-            <div class="partners-next-container">
+        <div class="partners-carousel-container row no-gutters" data-css-animate="trigger">
+
+            <div class="partners-next-container col-md-1">
                 <div class="partners-prev"></div>
             </div>
-            <div class="owl-carousel">
-                <div class="row">
+            <div class="owl-carousel col-md-10">
+                <div class="row no-gutters">
                     <div class="col-12 partner-item">
                         <img src="img/partners-carousel/paybis.png" alt="paybis">
                     </div>
@@ -270,7 +272,7 @@
                         <img src="img/partners-carousel/xb-software.png" alt="xb-software">
                     </div>
                 </div>
-                <div class="row">
+                <div class="row no-gutters">
                     <div class="col-12 partner-item">
                         <img src="img/partners-carousel/microsoftazure.png" alt="microsoftazure">
                     </div>
@@ -278,7 +280,7 @@
                         <img src="img/partners-carousel/blockweather.png" alt="blockweather">
                     </div>
                 </div>
-                <div class="row">
+                <div class="row no-gutters">
                     <div class="col-12 partner-item">
                         <img src="img/partners-carousel/growth.png" alt="growth">
                     </div>
@@ -287,7 +289,7 @@
                     </div>
                 </div>
             </div>
-            <div class="partners-next-container">
+            <div class="partners-next-container col-md-1">
                 <div class="partners-next"></div>
             </div>
         </div>
