--- a/projects.html
+++ b/projects.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/lib/animate.min.css">
     <link rel="stylesheet" href="css/lib/bootstrap.min.css">
     <link rel="stylesheet" href="css/fonts.css">
-        <link href="https://fonts.googleapis.com/css?family=Jaldi:400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Jaldi:400,700" rel="stylesheet">
 
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/footer.css">
@@ -20,7 +20,6 @@
     <link rel="stylesheet" href="css/about.css">
     <link rel="stylesheet" href="css/services.css">
     <link rel="stylesheet" href="css/contacts.css">
-    <link rel="stylesheet" href="css/projects.css">
 
     <script type="text/javascript" src="js/lib/jquery-3.3.1.min.js"></script>
     <script type="text/javascript" src="js/lib/bootstrap.min.js"></script>
@@ -81,9 +80,7 @@
             </div>
         </div>
     </header><!-- HEADER -->
-
-    <br><br><br>
-
+    
     <section class="page-title parallax-window" data-parallax="scroll" data-image-src="img/about-title-bg.jpg">
         <div class="page-titke-overlay">
             <div class="cj-container">
@@ -97,142 +94,168 @@
     </section><!-- TITLE -->
 
     <section class="projects-in-numbers">
-        <div class="cj-container">
-            <h2 class="section-header" data-css-animate="trigger">Projects in numbers</h2>
-            <div class="row projects-wrapper" data-projectsAutocount="container">
-                <div class="col-sm-12 col-md-4 project">
-                    <h3>Performed ICOs</h3>
-                    <p class="partners-number-large">
-                        <span class="achivment-amount" data-projectsAutocount="field" data-from="1" data-to="15">15</span>
-                    </p>
+    <div class="cj-container">
+        <h2 class="section-header" data-css-animate="trigger">Achievements</h2>
+        <div class="project-items" data-css-animate="trigger">
+            <div class="row no-gutters achievements-row" data-projectsAutocount="container">
+                <div class="col-sm-12 col-md-4">
+                    <div class="project-item ">
+                        <h3>Collected funds</h3>
+                        <p class="partners-number-medium">$<span data-projectsAutocount="field" data-from="267"
+                                                                 data-to="400">400</span><span
+                                class="partner-number-description">Million</span></p>
+                    </div>
                 </div>
-                <div class="col-sm-12 col-md-4 project middle-project-border">
-                    <h3>Successful ICOs</h3>
-                    <p class="partners-number-large partners-number-gradient">
-                        <span class="achivment-amount" data-projectsAutocount="field" data-from="1" data-to="15">15</span>
-                    </p>
+                <div class="col-sm-12 col-md-4">
+                    <div class="project-item project-item-middle">
+                        <h3>Successful ICOs</h3>
+                        <p><span class="success-ico-color partners-number-medium" data-projectsAutocount="field"
+                                 data-from="7" data-to="15">15</span></p>
+                    </div>
                 </div>
-                <div class="col-sm-12 col-md-4 no-gutters project ">
-                    <h3>Collected funds</h3>
-                    <p class="partners-number-medium">
-                        $<span class="achivment-amount" data-projectsAutocount="field" data-from="267" data-to="400">400</span>
-                        <span class="project-description">Million</span>
-                    </p>
-                </div>
-                <div class="col-sm-12 col-md-4 project">
-                    <h3>Attracted investors</h3>
-                    <p class="partners-number-medium">
-                        <span class="achivment-amount" data-projectsAutocount="field" data-from="267" data-to="400">3000</span>+
-                    </p>
-                </div>
-                <div class="col-sm-12 col-md-4 project middle-project-border">
-                    <h3>Average contribution of one investor</h3>
-                    <p class="partners-number-medium">
-                        $<span class="achivment-amount" data-projectsAutocount="field" data-from="267" data-to="400">400</span>
-                        <span class="project-description">Million</span>
-                    </p>
-                </div>
-                <div class="col-sm-12 col-md-4 project">
-                    <h3>Average time to launching ICO</h3>
-                    <p class="partners-number-medium">
-                        $<span class="achivment-amount" data-projectsAutocount="field" data-from="267" data-to="400">400</span>
-                        <span class="project-description">Million</span>
-                    </p>
+                <div class="col-sm-12 col-md-4">
+                    <div class="project-item project-item-last">
+                        <h3>Attracted investors</h3>
+                        <p class="partners-number-medium"><span data-projectsAutocount="field" data-from="2500"
+                                                                data-to="3000">3000</span><span>+</span></p>
+                    </div>
                 </div>
             </div>
+            <div class="row no-gutters achievements-row" data-projectsAutocount="container">
+                <div class="col-sm-12 col-md-4">
+                    <div class="project-item ">
+                        <h3>Attracted investors</h3>
+                        <p class="partners-number-medium"><span data-projectsAutocount="field" data-from="267"
+                                                                 data-to="400">400</span>+</p>
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-4">
+                    <div class="project-item project-item-middle">
+                        <h3>Average contribution of one investor</h3>
+                        <p class="partners-number-medium">$<span data-projectsAutocount="field" data-from="267"
+                                                                 data-to="400">400</span><span
+                                class="partner-number-description">Million</span></p>
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-4">
+                    <div class="project-item project-item-last">
+                        <h3>Average time to launching ICO</h3>
+                        <p class="partners-number-medium">$<span data-projectsAutocount="field" data-from="267"
+                                                                 data-to="400">400</span><span
+                                class="partner-number-description">Million</span></p>
+                    </div>
+                </div>
+            </div>
+            <div class="cj-btn-container">
+                <a href="#" class="cj-btn" data-css-animate="trigger"><span>Read more</span></a>
+            </div>
         </div>
-    </section><!-- PROJECTS-IN-NUBMBERS -->
+
+    </div>
+</section>
 
     <section class="projects-partners">
         <div class="cj-container">
             <div class="section-header">Our Clients</div>
             <div class="projects-clients-slider-wraper no-gutters row">
-                <div class="col-md-2 no-gutters"></div>
-                <div class="col-sm-12 col-md-8 no-gutters">
-                    <div class="slider-clients">
+                <div class="col-sm-12 col-md-12">
+                    <div class="owl-carousel owl-carousel-2">
                         <div class="row">
                             <div class="col-12 partner-item">
-                                <img src="img/partners-carousel/paybis.png" alt="paybis">
-                            </div>
-                            <div class="col-12 partner-item">
-                                <img src="img/partners-carousel/xb-software.png" alt="xb-software">
+                                <a href="https://engagementtoken.com">
+                                    <img src="img/Engagement-Token-Logo-2.png" alt="paybis">
+                                </a>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-12 partner-item">
-                                <img src="img/partners-carousel/microsoftazure.png" alt="microsoftazure">
-                            </div>
-                            <div class="col-12 partner-item">
-                                <img src="img/partners-carousel/blockweather.png" alt="blockweather">
+                                <a href="https://neuromation.io">
+                                    <img src="img/logo_2.svg" alt="microsoftazure">
+                                </a>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-12 partner-item">
-                                <img src="img/partners-carousel/growth.png" alt="growth">
-                            </div>
-                            <div class="col-12 partner-item">
-                                <img src="img/partners-carousel/coinbazz.png" alt="coinbazz">
+                                <a href="http://osadc.io">
+                                    <img src="img/osa.png" alt="growth">
+                                </a>
                             </div>
                         </div>
                     </div>
-
                 </div>
-                <div class="col-md-2 no-gutters"></div>
             </div>
         </div>
     </section><!-- PROJECTS-PARTNERS -->
 
-    <section class="projects-in-numbers"></section><!-- PROJECTS-REVIEWS -->
+    <section class="clients-reviews">
+        <div class="cj-container">
+            <h2 class="section-header animated fadeInUp" data-css-animate="trigger">What our clients say</h2>
+            <article class="review-item">
+                <p class="client-review">
+                    Thanks to the rapid response of our cybersecurity partners - Hacken, the phishing attack was repelled and all efforts of the criminals were eliminated in no time. Only 2 hours passed from the start of the work of phishing sites to the moment of their disconnection.
+                </p>
+                <div class="client-info">
+                    <div class="client-photo-wrapper">
+                        <img src="img/max.png">
+                    </div>
+                    <div>
+                        <p class="client-name">Maxim Prasolov</p>
+                        <p class="client-position">Neuromation</p>
+                    </div>
+                </div>
+            </article>
+        </div>
+    </section>
 
     <section class="bottom-links">
-        <div class="cj-container">
+        <div class="cj-container background-color-grey">
             <div class="bottom-links-container">
-                <div class="services-link" data-css-animate="trigger">
-                 <a href="about.html">
-                    <img class="left-bottom-link-arrow" src="img/arrow-in-circle.png" alt="arrow in circle">
-                    <span>About us</span>
-                </a>
-            </div>
-            <div class="projects-link" data-css-animate="trigger">
-                <a href="services.html">
-                    <span>Services</span>
-                    <img src="img/arrow-in-circle.png" alt="arrow in circle">
-                </a>
-            </div>
-        </div>
-    </div>
-</section><!-- LINKS -->
-
-<footer class="footer">
-    <div class="footer-container">
-        <div class="row">
-            <div class="col-12">
-                <span class="footer-connect-us">Connect with us</span>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-12 col-sm-12">
-                <div class="social-links">
-                    <a href="#" class="fb-icon"></a>
-                    <a href="#" class="twitter-icon"></a>
-                    <a href="#" class="telegram-icon"></a>
-                    <a href="#" class="youtube-icon"></a>
+                <div class="link-item-wrapper" data-css-animate="trigger">
+                    <a href="services.html">
+                        <img src="img/links/DSC_3272.jpg" alt="A lamp">
+                        <span>Services</span>
+                    </a>
+                </div>
+                <div class="link-item-wrapper" data-css-animate="trigger">
+                    <a href="projecs.html">
+                        <img src="img/links/DSC_3244.jpg" alt="Toy">
+                        <span>Projects</span>
+                    </a>
                 </div>
             </div>
         </div>
-        <div class="row">
-            <div class="col-12">
-                <div class="copyright">© 2018 CoinJapan</div>
+    </section><!-- LINKS -->
+
+    <footer class="footer">
+        <div class="footer-container">
+            <div class="row">
+                <div class="col-12">
+                    <span class="footer-connect-us">Connect with us</span>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12 col-sm-12">
+                    <div class="social-links">
+                        <a href="#" class="fb-icon"></a>
+                        <a href="#" class="twitter-icon"></a>
+                        <a href="#" class="telegram-icon"></a>
+                        <a href="#" class="youtube-icon"></a>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12">
+                    <div class="copyright">© 2018 CoinJapan</div>
+                </div>
+            </div>
+            <div class="footer-go-to-top" data-go-to-top="btn">
+                <img src="img/arrowGoToTop.png" alt="go to top">
             </div>
         </div>
-        <div class="footer-go-to-top" data-go-to-top="btn">
-            <img src="img/arrowGoToTop.png" alt="go to top">
-        </div>
-    </div>
-</footer>
+    </footer>
 
-<div id="preloader"></div>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDBwY9f3meuCBvcVK20P8RkGlxYQMbhz08"></script>
-<script src="js/main.js"></script>
+    <div id="preloader"></div>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDBwY9f3meuCBvcVK20P8RkGlxYQMbhz08"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
